syntax = "proto3";

option go_package = "github.com/kokiebisu/mycontent/packages/service-user/proto";

service UserService {
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserByEmailResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}

message CreateUserRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string username = 4;
  string password = 5;
  string interest = 6;
  int32 years_of_experience = 7;
  string publish_time = 8;
}

message CreateUserResponse {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string username = 5;
  string interest = 6;
  int32 years_of_experience = 7;
  string publish_time = 8;
}

message GetUserByEmailRequest {
  string email = 1;
}

message GetUserByEmailResponse {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string username = 5;
  string interest = 6;
  int32 years_of_experience = 7;
  string publish_time = 8;
}
